data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1775.wast
;; 6. **Test Case 6**: Insert a `br_if` instruction that branches to a `block` within a loop, ensuring operand types match the block’s expected outputs.    - **Constraint Checked**: Forward branching type validation and correct operand stack unwinding.    - **CFG Relation**: CFG errors with incorrect operand stack transitions causing logical inconsistencies.

(assert_invalid
  (module
    (func $block_in_loop
      (loop (block (result i32)
        (br_if 0 (i32.const 0))
      ))
      (i32.const 42) (drop)
    )
  )
  "type mismatch"
)